# tutorial-actix-auth-service-gvp

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/: 20210729005050_create-tables.sql
src/: main.rs
src/config/: crypto.rs  mod.rs
src/db/: user.rs
src/error/: mod.rs
src/handler/: auth.rs  mod.rs  user.rs
src/model/: user.rs
