[package]
name = "tutorial-auth-service-gvp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1"
actix-web = "2"
argonautica = { version = "0.2", features = ["simd"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.10"
color-eyre = "0.3"
dotenv = "0.15"
eyre = "0.4"
futures = { version = "0.3", features = ["compat"] }
jsonwebtoken = "7.1"
serde = { version = "1.0", features = ["derive"] }
# tokio + rustls
sqlx = { version = "0.5", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = { version = "0.1", features = ["env_logger"] }
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["serde"] }
validator = "0.10"
validator_derive = "0.10"